crates/apollo-compiler/test_data/diagnostics/0055_duplicate_variable_definitions.txt
Error: the variable `atOtherHomes` is defined multiple times in the document
   ╭─[0055_duplicate_variable_definitions.graphql:1:49]
   │
 1 │ query houseTrainedQuery($atOtherHomes: Boolean, $atOtherHomes: Boolean) {
   │                         ───────────┬──────────  ───────────┬──────────  
   │                                    ╰──────────────────────────────────── previous definition of `atOtherHomes` here
   │                                                            │            
   │                                                            ╰──────────── `atOtherHomes` redefined here
   │ 
   │ Help: atOtherHomes must only be defined once in this enum.
───╯

